--- a/index.html
+++ b/index.html
@@ -304,8 +304,12 @@
 					</div>
 				</section> -->
 
-				<span class="heading-meta">My achievements</span>
-				<h2 class="colorlib-heading animate-box">My achievements</h2>
+				<div class="row">
+					<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+						<span class="heading-meta">My achievements</span>
+						<h2 class="colorlib-heading animate-box">My achievements</h2>
+					</div>
+				</div>
 				<div id="colorlib-counter" class="colorlib-counters"
 					style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
 					<div class="overlay"></div>
