--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<ul>
 							<!-- <li class="active"><a href="#" data-nav-section="home">Home</a></li> -->
 							<li class="active"><a href="#" data-nav-section="about">About</a></li>
-							<!-- <li><a href="#" data-nav-section="services">Services</a></li> -->
+							<li><a href="#" data-nav-section="achievements">Achievements</a></li>
 							<li><a href="#" data-nav-section="skills">Skills</a></li>
 							<li><a href="#" data-nav-section="education">Education</a></li>
 							<li><a href="#" data-nav-section="experience">Experience</a></li>
@@ -303,13 +303,16 @@
 						</div>
 					</div>
 				</section> -->
-
-				<div class="row">
-					<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-						<span class="heading-meta">My achievements</span>
-						<h2 class="colorlib-heading animate-box">My achievements</h2>
+				<div class="colorlib-narrow-content" data-section="achievements">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box"
+							data-animate-effect="fadeInLeft">
+							<span class="heading-meta">My achievements</span>
+							<h2 class="colorlib-heading animate-box">My achievements</h2>
+						</div>
 					</div>
 				</div>
+
 				<div id="colorlib-counter" class="colorlib-counters"
 					style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
 					<div class="overlay"></div>
