--- a/index.html
+++ b/index.html
@@ -303,15 +303,18 @@
 						</div>
 					</div>
 				</section> -->
-				<div class="colorlib-narrow-content" data-section="achievements">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box"
-							data-animate-effect="fadeInLeft">
-							<span class="heading-meta">My achievements</span>
-							<h2 class="colorlib-heading animate-box">My achievements</h2>
+
+				<section data-section="achievements">
+					<div class="colorlib-narrow-content">
+						<div class="row">
+							<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box"
+								data-animate-effect="fadeInLeft">
+								<span class="heading-meta">My achievements</span>
+								<h2 class="colorlib-heading animate-box">My achievements</h2>
+							</div>
 						</div>
 					</div>
-				</div>
+				</section>
 
 				<div id="colorlib-counter" class="colorlib-counters"
 					style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
