--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<span class="position" style="margin-bottom: 0;">Student in <a href="https://www.sgu.edu.vn/">Sai
 							Gon University</a></span>
 					<span class="position" style="margin-bottom: 0;">Majoring Software Engineering</span>
-					<span class="position"><a href="">Resume</a></span>
+					<span class="position"><a href="/pdf/resume.pdf">Resume</a></span>
 				</div>
 				<nav id="colorlib-main-menu" role="navigation" class="navbar">
 					<div id="navbar" class="collapse">
