--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
 					<span class="position" style="margin-bottom: 0;">Student in <a href="https://www.sgu.edu.vn/">Sai
 							Gon University</a></span>
 					<span class="position" style="margin-bottom: 0;">Majoring Software Engineering</span>
-					<span class="position"><a href="/pdf/resume.pdf">Resume</a></span>
+					<span class="position">
+						<a href="pdf/resume.pdf">Resume</a> |
+						<a href="https://github.com/thientranreal">Github</a>
+					</span>
 				</div>
 				<nav id="colorlib-main-menu" role="navigation" class="navbar">
 					<div id="navbar" class="collapse">
@@ -520,20 +523,6 @@
 								<div class="timeline-centered">
 									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 										<div class="timeline-entry-inner">
-
-											<div class="timeline-icon color-1">
-												<i class="icon-pen2"></i>
-											</div>
-
-											<div class="timeline-label">
-												<h2><a href="#">Employee at Kumon</a> <span>2017-2018</span></h2>
-											</div>
-										</div>
-									</article>
-
-
-									<article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
-										<div class="timeline-entry-inner">
 											<div class="timeline-icon color-2">
 												<i class="icon-pen2"></i>
 											</div>
@@ -547,7 +536,7 @@
 										</div>
 									</article>
 
-									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+									<article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
 										<div class="timeline-entry-inner">
 											<div class="timeline-icon color-3">
 												<i class="icon-pen2"></i>
@@ -559,36 +548,6 @@
 											</div>
 										</div>
 									</article>
-
-									<!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
-										<div class="timeline-entry-inner">
-											<div class="timeline-icon color-4">
-												<i class="icon-pen2"></i>
-											</div>
-											<div class="timeline-label">
-												<h2><a href="#">Creative Designer</a> <span>2017-2018</span></h2>
-												<p>Even the all-powerful Pointing has no control about the blind texts
-													it is an almost unorthographic life One day however a small line of
-													blind text by the name of Lorem Ipsum decided to leave for the far
-													World of Grammar.</p>
-											</div>
-										</div>
-									</article> -->
-
-									<!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-										<div class="timeline-entry-inner">
-											<div class="timeline-icon color-5">
-												<i class="icon-pen2"></i>
-											</div>
-											<div class="timeline-label">
-												<h2><a href="#">UI/UX Designer at Envato</a> <span>2017-2018</span></h2>
-												<p>Even the all-powerful Pointing has no control about the blind texts
-													it is an almost unorthographic life One day however a small line of
-													blind text by the name of Lorem Ipsum decided to leave for the far
-													World of Grammar.</p>
-											</div>
-										</div>
-									</article> -->
 
 									<article class="timeline-entry begin animate-box"
 										data-animate-effect="fadeInBottom">
@@ -622,7 +581,9 @@
 											</div>
 											<div class="timeline-label">
 												<h2>
-													<a href="#">Learning English Game on Web</a>
+													<a href="https://github.com/thientranreal/web_project">
+														Learning English Game on Web
+													</a>
 												</h2>
 												<p>Using Git, HTML,
 													CSS,
@@ -637,7 +598,9 @@
 											</div>
 											<div class="timeline-label">
 												<h2>
-													<a href="#">Web Spotify Clone</a>
+													<a href="https://github.com/Neptune27/SpotifyNoBudget">
+														Web Spotify Clone
+													</a>
 												</h2>
 												<p>Using Git, Bootstrap, JavaScript, PHP, MVC Model</p>
 											</div>
@@ -649,7 +612,11 @@
 											<div class="timeline-icon color-3">
 											</div>
 											<div class="timeline-label">
-												<h2><a href="#">Fast Food Management App</a></h2>
+												<h2>
+													<a href="https://github.com/thientranreal/QLCHBanThucAnNhanh">
+														Fast Food Management App
+													</a>
+												</h2>
 												<p>Using Git, Java Swing, 3 Layer Model</p>
 											</div>
 										</div>
@@ -660,7 +627,11 @@
 											<div class="timeline-icon color-4">
 											</div>
 											<div class="timeline-label">
-												<h2><a href="#">Mini Supermarket App</a></h2>
+												<h2>
+													<a href="https://github.com/thientranreal/MiniSupermarket">
+														Mini Supermarket App
+													</a>
+												</h2>
 												<p>Using Git, .Net, 3 Layer Model, Stored Procedure</p>
 											</div>
 										</div>
