--- a/index.html
+++ b/index.html
@@ -588,6 +588,11 @@
 												<p>Using Git, HTML,
 													CSS,
 													JavaScript, jQuery</p>
+												<p>
+													Developed a multiple-choice test for users 
+													and an admin page for creating new questions
+													Used local storage to save and load data
+												</p>
 											</div>
 										</div>
 									</article>
@@ -602,7 +607,8 @@
 														Web Spotify Clone
 													</a>
 												</h2>
-												<p>Using Git, Bootstrap, JavaScript, PHP, MVC Model</p>
+												<p>Using Git, Bootstrap, JavaScript, Docker, PHP, MVC Model</p>
+												<p>Developed a full-stack spotify web</p>
 											</div>
 										</div>
 									</article>
@@ -618,6 +624,7 @@
 													</a>
 												</h2>
 												<p>Using Git, Java Swing, 3 Layer Model</p>
+												<p>Developed a full-stack Fast Food Restaurant Management app</p>
 											</div>
 										</div>
 									</article>
@@ -633,6 +640,7 @@
 													</a>
 												</h2>
 												<p>Using Git, .Net, 3 Layer Model, Stored Procedure</p>
+												<p>Developed a full-stack MiniSupermarket Management app</p>
 											</div>
 										</div>
 									</article>
