--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 							<li><a href="#" data-nav-section="achievements">Achievements</a></li>
 							<li><a href="#" data-nav-section="skills">Skills</a></li>
 							<li><a href="#" data-nav-section="education">Education</a></li>
-							<!-- <li><a href="#" data-nav-section="experience">Experience</a></li> -->
+							<li><a href="#" data-nav-section="experience">Experience</a></li>
 							<li><a href="#" data-nav-section="work">Work</a></li>
-							<!-- <li><a href="#" data-nav-section="blog">Blog</a></li> -->
 							<li><a href="#" data-nav-section="contact">Contact</a></li>
+							<!-- <li><a href="#" data-nav-section="blog">Blog</a></li> -->
 						</ul>
 					</div>
 				</nav>
@@ -178,7 +178,7 @@
 											<ul>
 												<li>Programming languages: Java, JavaScript, C#, C++, Python,
 													PHP</li>
-												<li>Frameworks: ReactJS, Django</li>
+												<li>Frameworks: ReactJS, Django, .Net</li>
 												<li>Git, Linux, Data Structure and Algorithms, Object Oriented
 													Programming, Anaconda,
 													Docker</li>
@@ -509,7 +509,7 @@
 					</div>
 				</section>
 
-				<!-- <section class="colorlib-experience" data-section="experience">
+				<section class="colorlib-experience" data-section="experience">
 					<div class="colorlib-narrow-content">
 						<div class="row">
 							<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box"
@@ -542,7 +542,7 @@
 												<i class="icon-pen2"></i>
 											</div>
 											<div class="timeline-label">
-												<h2><a href="#">English Tutor</a> <span>2023-2024</span></h2>
+												<h2><a href="#">English Tutor</a> <span>2023</span></h2>
 												<p>Teaching is a effective way for learning new things so I decided to
 													teach English in order to enhance my language skills.</p>
 											</div>
@@ -560,7 +560,7 @@
 							</div>
 						</div>
 					</div>
-				</section> -->
+				</section>
 
 				<section class="colorlib-work" data-section="work">
 					<div class="colorlib-narrow-content">
@@ -590,8 +590,7 @@
 													JavaScript, jQuery</p>
 												<p>
 													Developed a multiple-choice test for users 
-													and an admin page for creating new questions
-													Used local storage to save and load data
+													and an admin page for creating new questions. Used local storage to save and load data
 												</p>
 											</div>
 										</div>
@@ -864,7 +863,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-7 col-md-push-1">
+							<!-- <div class="col-md-7 col-md-push-1">
 								<div class="row">
 									<div class="col-md-10 col-md-offset-1 col-md-pull-1 animate-box"
 										data-animate-effect="fadeInRight">
@@ -890,7 +889,7 @@
 									</div>
 
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</section>
