--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 											</div>
 											<div class="timeline-label">
 												<h2><a href="#">English Tutor</a> <span>2023</span></h2>
-												<p>Teaching is a effective way for learning new things so I decided to
+												<p>Teaching is an effective way for learning new things so I decided to
 													teach English in order to enhance my language skills.</p>
 											</div>
 										</div>
